[project]
name = "realsense-align"
version = "0.1.0"
description = "Python realsense align"
authors = [
    {name = "Louie Lu", email = "git@louie.lu"}
]
license = "BSD-3-Clause-Clear"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pybind11>=2.10.4",
    "numpy>=1.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "matplotlib>=3.7.1",
    "opencv-python>=4.7.0.72",
    "line-profiler>=4.0.3",
    "pre-commit>=3.3.3",
]


[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["realsense_align"]
package-dir = {"" = "src"}
