[project]
name = "realsense-align"
version = "0.1.3"
description = "Python realsense align"
authors = [
    {name = "Louie Lu", email = "git@louie.lu"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pybind11>=2.10.4",
    "numpy>=1.22",
]

[project.urls]
github = "https://github.com/mlouielu/realsense-align"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "cibuildwheel>=2.23.3",
    "click>=8.1.8",
    "matplotlib>=3.7.5",
    "opencv-python>=4.11.0.86",
    "line-profiler>=4.0.3",
    "pre-commit>=3.3.3",
    "zstandard>=0.23.0",
    "pyqt6>=6.7.1",
]

[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["realsense_align"]
package-dir = {"" = "src"}

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
